# kanjiconv

./: .gitignore  README.md  README_ja.md  pyproject.toml  setup.py  tox.ini  zenn.md
.github/workflows/: deploy2pypi.yml  python-tests.yml  unittest.yml
kanjiconv/: __init__.py  cli.py  kanjiconv.py  post_install.py
kanjiconv/data/: kana.json  kanji_readings.json
kanjiconv/entities/: __init__.py
tests/: conftest.py  test_cli.py  test_kanjiconv.py  test_python_support.py
