[tool.poetry]
name = "kanjiconv"
version = "0.2.4"
description = "Kanji Converter to Hiragana, Katakana, Roman alphabet"
authors = ["sea-turt1e <h.yamada.bg@gmail.com>"]
repository = "https://github.com/sea-turt1e/kanjiconv"
license = "Apache-2.0"
readme = "README.md"
keywords = ["kanji", "kana", "converter", "sudachi", "propernoun"]

[tool.poetry.scripts]
post_install = "kanjiconv.post_install:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
sudachipy = ">=0.6.8"
sudachidict-full = "*"
unidic = "^1.1.0"
fugashi = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-watch = "^4.2.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
packaging = "^24.1"
tomli = { version = "^2.0.1", python = "<3.11" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
