[project]
name = "kanjiconv"
version = "0.3.0"
description = "Kanji Converter to Hiragana, Katakana, Roman alphabet"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { file = "LICENSE" }
authors = [
	{ name = "sea-turt1e", email = "h.yamada.bg@gmail.com" }
]
keywords = ["kanji", "kana", "converter", "sudachi", "propernoun"]
dependencies = [
	"sudachipy>=0.6.8",
	"sudachidict-full",
]

[project.optional-dependencies]
unidic = [
	"unidic>=1.1.0,<2.0.0",
	"fugashi>=1.4.0,<2.0.0",
]

[project.urls]
Repository = "https://github.com/sea-turt1e/kanjiconv"
Issues = "https://github.com/sea-turt1e/kanjiconv/issues"

[project.scripts]
kanjiconv = "kanjiconv.cli:main"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
	"pytest>=8.3.3,<9.0.0",
	"pytest-watch>=4.2.0,<5.0.0",
	"pytest-mock>=3.13.0,<4.0.0",
	"pytest-cov>=5.0.0,<6.0.0",
	"packaging>=24.1,<25.0",
	"tomli>=2.0.1,<3.0.0; python_version < '3.11'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kanjiconv"]
